--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -29,6 +29,8 @@
   @include breakpoint($large) {
     @include span(2 of 12 last);
     opacity: 1;
+    border-left: 1px solid #000;
+    padding-left: 1.5em;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
 
